--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {margin:0;}
 body.left {background:#d0dce0; padding:20px;}
 body.content {background:whiteSmoke; padding:10px;}
 
+ul.topmenu {list-style-type:none; margin:0; padding:0;}
+ul.topmenu li {border-bottom:1px solid black; float:left;}
+.tab {background-color:#e5e5e5; border:1px solid #d5d5d5; border-bottom:0; border-top-left-radius:7px; border-top-right-radius:7px; display:block; margin:1px; padding:2px 10px; white-space:nowrap;}
+
 a:link, a:visited, a:active {color:blue; text-decoration:none;}
 
 .logo {font-size:14; padding-bottom:15px; text-align:center; text-transform:uppercase;}
