--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,13 @@ body.content {background:whiteSmoke; padding:10px;}
 ul.topmenu {list-style-type:none; margin:0; padding:0;}
 ul.topmenu li {border-bottom:1px solid black; float:left;}
 .tab {background-color:#e5e5e5; border:1px solid #d5d5d5; border-bottom:0; border-top-left-radius:7px; border-top-right-radius:7px; display:block; margin:1px; padding:2px 10px; white-space:nowrap;}
+.tab_active {background-color:whiteSmoke;}
 
 a:link, a:visited, a:active {color:blue; text-decoration:none;}
 
 .logo {font-size:14; padding-bottom:15px; text-align:center; text-transform:uppercase;}
+.logo img {border:0;}
+.logo a {color:black;}
 
 table th, table td {padding:3px 10px; vertical-align:top;}
 table tr.odd {background:#e5e5e5;}
