--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,5 @@ th {background:#d3dce3; color:black; font-weight:bold;}
 .ra {text-align:right;}
 
 div.error {border:red 2px solid; padding:10px; width:100%;}
+
+form.groupFilter {border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border: #AAA solid 1px; background: #eee; padding: 10px; width:25%;}
